# presburger

./: LICENSE  presburger.cabal
doc/: NumericsinCVC4.ps  README
new/: GCD.hs  JList1.hs  Term.hs
src/: Atom.hs  Euclid.hs  Formula.hs  GCD.hs  Presburger.hs  Syntax.hs  Term.hs
src/Data/: Sat.hs
src/Data/Integer/: Decide.hs  Inerts.hs  Monad.hs  OldPresburger.hs  Presburger.hs  SAT.hs  Solve.hs  Term.hs
src/Data/Integer/Presburger/: Atom.hs  Div.hs  Exists.hs  Form.hs  Formula.hs  HOAS.hs  JList1.hs  ModArith.hs  Notation.hs  Omega.hs  Prop.hs  SolveDiv.hs  Term.hs  Utils.hs
tests/: 1.hs  2.hs  3.hs  4.hs  5.hs  TestSat.hs  isabelle.hs  qc.hs
