Name:           presburger
Version:        0.4
License:        BSD3
License-file:   LICENSE
Author:         Iavor S. Diatchki
Homepage:       http://github.com/yav/presburger
Maintainer:     diatchki@galois.com
Category:       Algorithms
Synopsis:       Cooper's decision procedure for Presburger arithmetic.
Description:    Cooper's decision procedure for Presburger arithmetic.
Build-type:     Simple
Cabal-version:  >= 1.6

library
  Build-Depends:  base < 10, containers, pretty
  hs-source-dirs: src
  Exposed-modules:
    Data.Integer.Presburger
    Data.Integer.OldPresburger
    Data.Integer.Presburger.Term
    Data.Integer.Presburger.Prop
    Data.Integer.Presburger.Form
    Data.Integer.Presburger.SolveDiv
    Data.Integer.Presburger.Notation
    Data.Integer.Presburger.HOAS
    Data.Integer.Presburger.ModArith
    Data.Integer.Presburger.Utils

  GHC-options:    -O2 -Wall

source-repository head
  type: git
  location: git://github.com/yav/presburger.git

