Name:           presburger
Version:        1.0
License:        BSD3
License-file:   LICENSE
Author:         Iavor S. Diatchki
Homepage:       http://github.com/yav/presburger
Maintainer:     diatchki@galois.com
Category:       Algorithms
Synopsis:       Cooper's decision procedure for Presburger arithmetic.
Description:    Cooper's decision procedure for Presburger arithmetic.
Build-type:     Simple
Cabal-version:  >= 1.6

library
  Build-Depends:  base < 10, containers, pretty
  hs-source-dirs: src
  Exposed-modules:
    Data.Integer.Presburger
  Other-modules:
    Data.Integer.Presburger.Term
    Data.Integer.Presburger.Exists
    Data.Integer.Presburger.Formula
    Data.Integer.Presburger.Div

  GHC-options:    -O2 -Wall

source-repository head
  type: git
  location: git://github.com/yav/presburger.git

